--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -94,12 +94,12 @@
                     <th scope="col">No</th>
                     <th scope="col">Product Name</th>
                     <th scope="col">Price</th>
-                    <th scope="col">Age</th>
-                    <th scope="col">Start Date</th>
+                    <th scope="col">Sub Total</th>
+                    <th scope="col">Total</th>
                   </tr>
                 </thead>
                 <tbody>
-                  <tr>
+                  <!-- <tr>
                     <th scope="row">1</th>
                     <td>Brandon Jacob</td>
                     <td>Designer</td>
@@ -133,7 +133,7 @@
                     <td>Dynamic Division Officer</td>
                     <td>47</td>
                     <td>2011-04-19</td>
-                  </tr>
+                  </tr> -->
                 </tbody>
               </table>
               <div
@@ -166,7 +166,7 @@
                     </div> -->
 
           <!-- Top Selling -->
-          <div class="col-12">
+          <!-- <div class="col-12">
             <div class="card top-selling overflow-auto">
               <div class="filter">
                 <a class="icon" href="#" data-bs-toggle="dropdown"
@@ -276,7 +276,7 @@
                 </table>
               </div>
             </div>
-          </div>
+          </div> -->
           <!-- End Top Selling -->
         </div>
       </div>
