--- a/views/customers/data-customer.ejs
+++ b/views/customers/data-customer.ejs
@@ -36,39 +36,39 @@
               <thead>
                 <tr>
                   <th scope="col">No</th>
-                  <th scope="col">ID Customer</th>
+                  <!-- <th scope="col">ID Customer</th> -->
                   <th scope="col">Name</th>
                   <th scope="col">Email</th>
                   <th scope="col">Action</th>
                 </tr>
               </thead>
               <tbody>
-                <% customers.forEach((data_customer, index) => { %>
+                <% cust.forEach((data_customer, index) => { %>
                 <!-- scope="row" -->
                 <tr>
                   <td><%= index + 1 %></td>
-                  <td><%= data_customer.id_customer %></td>
-                  <td><%= data_customer.nama %></td>
+
+                  <td><%= data_customer.name %></td>
                   <td><%= data_customer.email %></td>
 
                   <td>
                     <a
-                      href="/data-customer/detail-customer/<%= data_customer.id_customer %>"
+                      href="/data-customer/detail-customer/<%= data_customer.user_id %>"
                       class="btn btn-primary btn-md position-relative"
                       >Detail</a
                     >
 
                     <a
-                      href="/data-customer/update-customer/<%= data_customer.id_customer %>"
+                      href="/data-customer/update-customer/<%= data_customer.user_id %>"
                       class="btn btn-primary btn-md position-relative"
                     >
                       Update
                     </a>
 
                     <a
-                      href="/data-customer/delete-customer/<%= data_customer.id_customer %>"
+                      href="/data-customer/delete-customer/<%= data_customer.user_id %>"
                       class="btn btn-danger btn-md position-relative"
-                      onclick="return confirm(`Are you sure you want to delete <%= data_customer.nama %>?`)"
+                      onclick="return confirm(`Are you sure you want to delete <%= data_customer.name %>?`)"
                     >
                       Delete
                     </a>
