--- a/views/layout/login-page.ejs
+++ b/views/layout/login-page.ejs
@@ -53,7 +53,10 @@
                 class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center"
               >
                 <div class="d-flex justify-content-center py-4">
-                  <a href="/" class="logo d-flex align-items-center w-auto">
+                  <a
+                    href="/login"
+                    class="logo d-flex align-items-center w-auto"
+                  >
                     <img src="/assets/img/logo.png" alt="Logo VirtuVorgue" />
                     <span class="d-none d-lg-block">VirtuVorgue</span>
                   </a>
@@ -136,6 +139,11 @@
                         <p class="small mb-0">
                           Don't have account?
                           <a href="/register">Create an account</a>
+                        </p>
+                      </div>
+                      <div class="col-12">
+                        <p class="small mb-0">
+                          <a href="/register">Forget Password?</a>
                         </p>
                       </div>
                     </form>
