--- a/views/layout/sidebar.ejs
+++ b/views/layout/sidebar.ejs
@@ -28,7 +28,10 @@
           <a href="/cart"> <i class="bi bi-circle"></i><span>Cart</span> </a>
         </li>
         <li>
-          <a href="tables-data.html">
+          <a
+            href="/
+          "
+          >
             <i class="bi bi-circle"></i><span>Data Tables</span>
           </a>
         </li>
@@ -158,28 +161,28 @@
     </li> -->
     <!-- End Contact Page Nav -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/register">
         <i class="bi bi-card-list"></i>
         <span>Register</span>
       </a>
-    </li>
+    </li> -->
     <!-- End Register Page Nav -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/login">
         <i class="bi bi-box-arrow-in-right"></i>
         <span>Login</span>
       </a>
-    </li>
+    </li> -->
     <!-- End Login Page Nav -->
 
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a class="nav-link collapsed" href="/error">
         <i class="bi bi-dash-circle"></i>
         <span>Error 404</span>
       </a>
-    </li>
+    </li> -->
     <!-- End Error 404 Page Nav -->
 
     <!-- <li class="nav-item">
