--- a/views/dashboard-customer/dashboard.ejs
+++ b/views/dashboard-customer/dashboard.ejs
@@ -28,23 +28,29 @@
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <a href="/products/PC">
+                    <a href="/products">
                       <img src="/assets/img/hp_gaming.jpg" class="d-block w-100" alt="pc">
                     </a>
                     
                   </div>
                   <div class="carousel-item">
-                    <a href="/products/mobile-phone">
+                    <a href="/products">
                       <img src="/assets/img/handphone.jpg" class="d-block w-100" alt="mobile phone">
                     </a>
-                    
                   </div>
+
                   <div class="carousel-item">
-                    <a href="/products/sports"><img src="/assets/img/shoes.jpg" class="d-block w-100" alt="sports">
+                    <a href="/products"><img src="/assets/img/shoes.jpg" class="d-block w-100" alt="sports">
                     </a>
-                    
                   </div>
-                </div>
+
+                  <div class="carousel-item">
+                    <a href="/products"><img src="/assets/img/product-5.jpg" class="d-block w-100" alt="sports">
+                    </a>
+                  </div>
+
+                </div>  
+                <!-- end carousel-inner-->
 
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -68,7 +74,7 @@
             <div class="category-boxes">
               <!-- Kategori Box 1 -->
               <div class="category-box" >
-                <a href="/products/PC">
+                <a href="/products">
                 <img src="/assets/img/apple.jpg" alt="PC" >
                 <div class="category-name">PC & Accessories</div>
                 </a>
@@ -76,7 +82,7 @@
 
               <!-- Kategori Box 2 -->
               <div class="category-box">
-                <a href="/products/mobile-phone">
+                <a href="/products">
                 <img src="/assets/img/handphone.jpg" alt="Mobile Phone">
                 <div class="category-name">Mobile Phone & Accessories</div>
               </a>
@@ -84,7 +90,7 @@
 
               <!-- Kategori Box 3 -->
               <div class="category-box">
-                <a href="/products/sports">
+                <a href="/products">
                 <img src="/assets/img/shoes.jpg" alt="running shoes">
                 <div class="category-name">Sports</div>
                 </a>
@@ -104,35 +110,26 @@
   <!-- News & Updates Traffic -->
   <div class="card">
     <div class="filter">
-      <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-      <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-        <li class="dropdown-header text-start">
-          <h6>Filter</h6>
-        </li>
-
-        <li><a class="dropdown-item" href="#">Today</a></li>
-        <li><a class="dropdown-item" href="#">This Month</a></li>
-        <li><a class="dropdown-item" href="#">This Year</a></li>
-      </ul>
+      <a class="icon" href="#" data-bs-toggle="dropdown"></a>
     </div>
 
     <div class="card-body pb-0">
-      <h5 class="card-title">News &amp; Updates <span>| Today</span></h5>
+      <h5 class="card-title">Other Products</h5>
 
       <div class="news">
         <div class="post-item clearfix">
-          <img src="assets/img/news-1.jpg" alt="">
-          <h4><a href="#">Nihil blanditiis at in nihil autem</a></h4>
-          <p>Sit recusandae non aspernatur laboriosam. Quia enim eligendi sed ut harum...</p>
+          <img src="assets/img/product-2.jpg" alt="">
+          <h4><a href="/products">LENTIVEN WATERPROOF SMARTWATCH BLUETOOTH FITNESS</a></h4>
+          <p>TELPHONE FULL SCREEN</p>
         </div>
 
         <div class="post-item clearfix">
-          <img src="assets/img/news-2.jpg" alt="">
-          <h4><a href="#">Quidem autem et impedit</a></h4>
-          <p>Illo nemo neque maiores vitae officiis cum eum turos elan dries werona nande...</p>
+          <img src="assets/img/product-4.jpg" alt="">
+          <h4><a href="/products">PL-MX011 Fashion Sunglasses</a></h4>
+          <p>Korean Fashion Glasses Import</p>
         </div>
 
-        <div class="post-item clearfix">
+        <!-- <div class="post-item clearfix">
           <img src="assets/img/news-3.jpg" alt="">
           <h4><a href="#">Id quia et et ut maxime similique occaecati ut</a></h4>
           <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
@@ -148,7 +145,7 @@
           <img src="assets/img/news-5.jpg" alt="">
           <h4><a href="#">Et dolores corrupti quae illo quod dolor</a></h4>
           <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
-        </div>
+        </div> -->
 
       </div><!-- End sidebar recent posts-->
 
