--- a/views/index.ejs
+++ b/views/index.ejs
@@ -87,7 +87,7 @@
                       <i class="bi bi-people"></i>
                     </div>
                     <div class="ps-3">
-                      <h6><%= customerCount %></h6>
+                      <h6><%= userCount %></h6>
                        <span class="text-muted small pt-2 ps-1">Peoples</span>
                     </div>
                   </div>
