--- a/views/inventory/items.ejs
+++ b/views/inventory/items.ejs
@@ -28,10 +28,11 @@
               <a
                 href="/items/add"
                 class="btn btn-primary btn-md position-relative"
-                >Add</a
+                >Add Product</a
               >
             </div>
 
+            <!-- TABLE -->
             <table class="table table-hover datatable">
               <thead>
                 <tr>
@@ -49,11 +50,11 @@
                 <% products.forEach(function(product, index) { %>
                 <tr>
                   <td><%= index + 1 %></td>
-                  <td><%= product.product_id %></td>
-                  <td><%= product.product_name %></td>
-                  <td><%= product.category %></td>
-                  <td><%= product.stock_quantity %></td>
-                  <td>Rp. <%= product.price %></td>
+                  <td><%= (product.product_id || '-') %></td>
+                  <td><%= (product.product_name || '-') %></td>
+                  <td><%= (product.category || '-') %></td>
+                  <td><%= (product.stock_quantity || '-') %></td>
+                  <td><%= (product.price||'-').toLocaleString() %></td>
                   <td>
                     <a
                       href="/items/detail-products/<%= product.product_name %>"
