--- a/views/dashboard-customer/dashboard.ejs
+++ b/views/dashboard-customer/dashboard.ejs
@@ -129,23 +129,23 @@
           <p>Korean Fashion Glasses Import</p>
         </div>
 
-        <!-- <div class="post-item clearfix">
-          <img src="assets/img/news-3.jpg" alt="">
-          <h4><a href="#">Id quia et et ut maxime similique occaecati ut</a></h4>
-          <p>Fugiat voluptas vero eaque accusantium eos. Consequuntur sed ipsam et totam...</p>
+         <div class="post-item clearfix">
+          <img src="assets/img/product-1.jpg" alt="">
+          <h4><a href="/products">ADIDAS ULTRABOOST 21 TRIPLE BLACK ORIGINAL! - 40</a></h4>
+          <p>Made in Indonesia/Vietnam/China</p>
         </div>
 
-        <div class="post-item clearfix">
+        <!-- <div class="post-item clearfix">
           <img src="assets/img/news-4.jpg" alt="">
           <h4><a href="#">Laborum corporis quo dara net para</a></h4>
           <p>Qui enim quia optio. Eligendi aut asperiores enim repellendusvel rerum cuder...</p>
-        </div>
+        </div> -->
 
-        <div class="post-item clearfix">
+        <!-- <div class="post-item clearfix">
           <img src="assets/img/news-5.jpg" alt="">
           <h4><a href="#">Et dolores corrupti quae illo quod dolor</a></h4>
           <p>Odit ut eveniet modi reiciendis. Atque cupiditate libero beatae dignissimos eius...</p>
-        </div> -->
+        </div>  -->
 
       </div><!-- End sidebar recent posts-->
 
