--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -103,10 +103,11 @@
                           </div>
 
                           <a
-                            href="/cart"
+                            href="/add-cart/<%= products[i].product_id %>"
                             class="btn btn-primary btn-md position-relative"
                             style="margin-left: 10px"
-                            >Add to cart</a
+                          >
+                            Add to cart</a
                           >
                         </div>
                       </div>
