--- a/views/customers/data-customer.ejs
+++ b/views/customers/data-customer.ejs
@@ -10,6 +10,13 @@
     </nav>
   </div>
   <!-- End Page Title -->
+  <% if (message.length !=0) { if (message[0].alert=='success' ) { %>
+  <div class="alert alert-success" role="alert"><%= message[0].message %></div>
+  <% } else if (message[0].alert=='warning' ) { %>
+  <div class="alert alert-warning" role="alert"><%= message[0].message %></div>
+  <% } else { %>
+  <div class="alert alert-warning" role="alert"><%= message[0].message %></div>
+  <% } } %>
 
   <section class="section">
     <div class="row">
