--- a/views/inventory/items.ejs
+++ b/views/inventory/items.ejs
@@ -31,7 +31,19 @@
                 >Add Product</a
               >
             </div>
-
+            <% if (message.length !=0) { if (message[0].alert=='success' ) { %>
+            <div class="alert alert-success" role="alert">
+              <%= message[0].message %>
+            </div>
+            <% } else if (message[0].alert=='warning' ) { %>
+            <div class="alert alert-warning" role="alert">
+              <%= message[0].message %>
+            </div>
+            <% } else { %>
+            <div class="alert alert-warning" role="alert">
+              <%= message[0].message %>
+            </div>
+            <% } } %>
             <!-- TABLE -->
             <table class="table table-hover datatable">
               <thead>
