--- a/views/layout/nav.ejs
+++ b/views/layout/nav.ejs
@@ -13,19 +13,19 @@
 
       <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#" data-bs-toggle="dropdown">
         <img src="/assets/img/user2.png" alt="Profile" class="rounded-circle">
-        <span class="d-none d-md-block dropdown-toggle ps-2">Hi, Fadel aliyafasya</span>
+        <span class="d-none d-md-block dropdown-toggle ps-2">Hi, <%= userData.username %></span>
       </a><!-- End Profile Iamge Icon -->
 
       <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow profile">
         <li class="dropdown-header">
-          <h6>Fadel Muhamad Aliyafasya</h6>
-          <span>Manager</span>
+          <h6><%= userData.name %></h6>
+          <span>Role: <%= userData.role %></span>
         </li>
         <li>
           <hr class="dropdown-divider">
         </li>
 
-        <li>
+        <!-- <li>
           <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
             <i class="bi bi-person"></i>
             <span>My Profile</span>
@@ -33,20 +33,20 @@
         </li>
         <li>
           <hr class="dropdown-divider">
-        </li>
+        </li> -->
 
-        <li>
+        <!-- <li>
           <a class="dropdown-item d-flex align-items-center" href="users-profile.html">
             <i class="bi bi-gear"></i>
             <span>Account Settings</span>
           </a>
-        </li>
+        </li> -->
         <li>
           <hr class="dropdown-divider">
         </li>
 
         <li>
-          <a class="dropdown-item d-flex align-items-center" href="#">
+          <a class="dropdown-item d-flex align-items-center" href="/logout">
             <i class="bi bi-box-arrow-right"></i>
             <span>Sign Out</span>
           </a>
